test/k8sT/manifests/cnp-update-deny-ingress-labelled.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Policy with the same name as cnp-update-allow-all to test CNP update"
metadata:
  name: "cnp-update"
spec:
  endpointSelector:
    matchLabels:
      id: app1
  ingress:
  - fromEndpoints:
    - matchLabels:
        id: app2
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
  labels:
  - key: "custom"
    value: "true"
